--- a/01.md
+++ b/01.md
@@ -129,8 +129,8 @@ npm i -g yarn eslint
 ### 2.3.1 UMD 빌드
 ### 2.3.2 CommonJS 빌드
 ### 2.3.3 ES Module 빌드 <-
-webpack 3 모듈 번들러
-Rollup 모듈 번들러 <-
+webpack 3 모듈 번들러 <-
+Rollup 모듈 번들러
 
 ---
 
